[gd_scene load_steps=2 format=3 uid="uid://baygpyean14dm"]

[ext_resource type="Script" path="res://cave_spears.gd" id="1_slp4f"]

[node name="cave_spears" type="StaticBody2D" groups=["spears"]]
position = Vector2(480, 0)
collision_mask = 0
script = ExtResource("1_slp4f")
metadata/_edit_group_ = true

[node name="TopSpear" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(0, -1, 50, -1, 25, 270)
disabled = true
one_way_collision_margin = 5.0

[node name="BottomSpear" type="CollisionPolygon2D" parent="."]
build_mode = 1
polygon = PackedVector2Array(0, 721, 50, 721, 25, 480)
disabled = true
one_way_collision_margin = 5.0

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(1, 0)
rect = Rect2(0, 0, 50, 720)

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
